# ub-essentials

./: CMakeLists.txt
essentials/blocks/: b_essentials_real_log.rs
include/ub_essentials/: categories.cpp  categories.hpp  essentials.hpp  mod.cpp  mod.hpp
include/ub_essentials/arguments/: real.cpp  real.hpp  text.cpp  text.hpp
include/ub_essentials/blocks/booleans/: and.cpp  and.hpp  flip.cpp  flip.hpp  log.cpp  log.hpp  not.cpp  not.hpp  or.cpp  or.hpp  set.cpp  set.hpp
include/ub_essentials/blocks/reals/: abs.cpp  abs.hpp  ceil.cpp  ceil.hpp  comp_eq.cpp  comp_eq.hpp  comp_gr.cpp  comp_gr.hpp  comp_gr_eq.cpp  comp_gr_eq.hpp  comp_ls.cpp  comp_ls.hpp  comp_ls_eq.cpp  comp_ls_eq.hpp  cos.cpp  cos.hpp  divide.cpp  divide.hpp  eulers.cpp  eulers.hpp  floor.cpp  floor.hpp  from_bool.cpp  from_bool.hpp  from_string.cpp  from_string.hpp  log.cpp  log.hpp  logarithmic.cpp  logarithmic.hpp  minus.cpp  minus.hpp  mod.cpp  mod.hpp  multiply.cpp  multiply.hpp  pi.cpp  pi.hpp  plus.cpp  plus.hpp  (+12 more)
include/ub_essentials/blocks/strings/: cat_from.cpp  cat_from.hpp  char_at.cpp  char_at.hpp  comp_eq.cpp  comp_eq.hpp  find.cpp  find.hpp  from_bool.cpp  from_bool.hpp  from_real.cpp  from_real.hpp  from_real_int.cpp  from_real_int.hpp  length.cpp  length.hpp  log.cpp  log.hpp  set.cpp  set.hpp  sub_string.cpp  sub_string.hpp
include/ub_essentials/blocks/system/: main.cpp  main.hpp
include/ub_essentials/types/: bool.cpp  bool.hpp  f32.cpp  f32.hpp  f64.cpp  f64.hpp  i16.cpp  i16.hpp  i32.cpp  i32.hpp  i64.cpp  i64.hpp  i8.cpp  i8.hpp  string.cpp  string.hpp  u16.cpp  u16.hpp  u32.cpp  u32.hpp  u64.cpp  u64.hpp  u8.cpp  u8.hpp
