cmake_minimum_required(VERSION 3.15)
project(UB_MOD_ESSENTIALS)

set(MOD_UNLOCALIZED_NAME, "ub_essentials")
file(GLOB_RECURSE UB_MOD_ESSENTIALS_SRC "include/*/*.cpp" "include/*.cpp")

add_library(UB_MOD_ESSENTIALS MODULE ${UB_MOD_ESSENTIALS_SRC})

if(MSVC)
	source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/include/${MOD_UNLOCALIZED_NAME}
				 FILES ${UB_MOD_ESSENTIALS_SRC})
	target_compile_options(UB_MOD_ESSENTIALS PRIVATE "/MP")
endif()

set_target_properties(UB_MOD_ESSENTIALS PROPERTIES OUTPUT_NAME "${MOD_UNLOCALIZED_NAME}")

add_dependencies(
	UB_MOD_ESSENTIALS ${UB_DEPENDENCIES} UB_CLIENT)

target_include_directories(
	UB_MOD_ESSENTIALS
	PUBLIC SYSTEM ${UB_INCLUDES}
)

target_link_libraries(
	UB_MOD_ESSENTIALS
	PUBLIC ${UB_DEPENDENCIES_LINK} UB_ESPRESSO UB_LUNGO UB_MOCHA
)

target_include_directories(
	UB_MOD_ESSENTIALS
	PUBLIC SYSTEM ${PROJECT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include
		   ${UB_DEPENDENCIES_INCLUDE} ${CMAKE_INCLUDES})

add_custom_command(
	TARGET UB_MOD_ESSENTIALS
	POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:UB_MOD_ESSENTIALS>
			$<TARGET_FILE_DIR:UB_CLIENT>/mods/)
